Added cart features & bug fix
